[package]
name = "gridgraph_rs"
version = "0.1.0"
edition = "2024"
description = "Min-cost flow grid graph generator (DIMACS format) — Rust rewrite of Resende's 1991 Fortran GRIDGRAPH"
license = "MIT"
keywords = ["network-flow", "min-cost-flow", "dimacs", "graph-generator", "benchmark"]
categories = ["command-line-utilities", "algorithms"]

[dependencies]
